# qusbdeviceswatcher

./: CMakeLists.txt  LICENSE  README.md  usbdeviceswatcher.pro
test_app/: CMakeLists.txt  main.cpp  test_app.pro
usbdeviceswatcher/: CMakeLists.txt  third_party_licenses.md  usbdeviceswatcher.cpp  usbdeviceswatcher.h  usbdeviceswatcher.pro  usbdeviceswatcher_global.h  usbdeviceswatcher_p.h
